force-app/main/default/objects/KimbleOne__CreditNoteSection__c/KimbleOne__CreditNoteSection__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Credit Note Section</label>
    <nameField>
        <label>Credit Note Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Note Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>