force-app/main/default/objects/KimbleOne__CreditNoteSection__c/fields/KimbleOne__CreditNote__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditNote__c</fullName>
    <label>Credit Note</label>
    <referenceTo>KimbleOne__CreditNote__c</referenceTo>
    <relationshipLabel>Credit Note Sections</relationshipLabel>
    <relationshipName>CreditNoteSections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>