force-app/main/default/objects/KimbleOne__CreditNoteSection__c/fields/KimbleOne__InvoiceSection__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceSection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Section</label>
    <referenceTo>KimbleOne__InvoiceSection__c</referenceTo>
    <relationshipLabel>Credit Note Sections</relationshipLabel>
    <relationshipName>CreditNoteSections</relationshipName>
    <type>Lookup</type>
</CustomField>